infra/flux/cl/kube-system/openid-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openid
  namespace: kube-system
  annotations:
    cert-manager.io/issuer: vault
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - openid.flux.alwaldend.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/openid-configuration
        - path:
            type: PathPrefix
            value: /openid/v1/jwks
      backendRefs:
        - name: kubernetes
          namespace: default
          port: 443
---
